# DiplomacyGM

./: .gitignore  .gitmodules  Changelog.md  README.md  bot_db.sqlite-shm  bot_db.sqlite-wal  config_defaults.toml  diplomacygm.service  main.py  makefile  pyproject.toml  requirements.txt
DiploGM/: bot.py  config.py  errors.py  help.py  manager.py  orders.ebnf  parse_board_params.py  parse_edit_state.py  parse_order.py  parse_server_params.py  parse_user_prefs.py  perms.py
DiploGM/adjudicator/: adjudicator.py  builds_adjudicator.py  defs.py  make_adjudicator.py  moves_adjudicator.py  retreats_adjudicator.py  validate_order.py
DiploGM/cogs/: administration.py  command.py  development.py  extension_management.py  fog_of_war.py  party.py  player.py  reputation.py  schedule.py  slash_substitute.py  spectator.py  variant_development.py
DiploGM/db/: database.py  schema.sql
DiploGM/map_parser/: adjacencies.py
DiploGM/mapper/: mapper.py  order_drawer.py  panel.py  utils.py
DiploGM/models/: adjacency.py  board.py  extension.py  order.py  player.py  province.py  rep_delta.py  turn.py  unit.py
DiploGM/repositories/: __init__.py  base.py  extension.py  factory.py  reputation.py
DiploGM/services/: base.py  extension.py  extension_service.py
DiploGM/utils/: __init__.py  color.py  image.py  import_game.py  logging.py  memory.py  open_cores.py  orders.py  (+4 more)
assets/: help_texts.toml  msg_templates.json
scripts/: generate_layers.py
test/: test_board_isolation.py  test_core.py  test_custom_units.py  test_dp.py  test_transform.py  utils.py
variants/: CONFIG.md
(+156 files in other folders)
